refactor(back-service): reduce validation logic duplication by extracting to utility class